# ticketmind-openenv

./: Dockerfile  README.md  fix.py  inference.py  inference_results.json  main.py  openenv.yaml  pyproject.toml  requirements.txt  validate.py
app/: environment.py  graders.py  main.py  models.py  tasks.py
server/: app.py
