[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ticketmind-openenv"
version = "1.0.0"
description = "TicketMind OpenEnv - Customer Support AI Agent Environment"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "openai>=1.12.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "server*"]